--- a/style.css
+++ b/style.css
@@ -1,10 +1,55 @@
 * {
     box-sizing: border-box;
+    font-family: Roboto;
 }
 
 body {
     margin: 0;
     padding: 0;
+}
+
+.page-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+
+.container {
+    height: 100%;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.logo {
+    max-width: 100px;
+}
+
+.logo img {
+    width: 100%;
+}
+
+.header {
+    min-height: 124px;
+    display: flex;
+    align-items: center;
+}
+
+.header-box {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.header-controls {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
 }
 
 .btn {
@@ -13,7 +58,9 @@ body {
     padding: 8px 16px;
     gap: 4px;
     outline: none;
+    height: 40px;
 }
+
 
 .btn-primary {
     border-radius: 2px;
@@ -28,47 +75,136 @@ body {
     color: #595959;
 }
 
-.logo {
-    max-width: 100px;
+.main {
+    flex-grow: 1;
+    background: linear-gradient(180deg, rgba(245, 245, 245, 0) 1.04%, #F5F5F5 100%);
 }
 
-.logo img {
-    width: 100%;
+.banner {
+    margin-bottom: 56px;
 }
 
-.header {
-    height: 124px;
+.banner-item {
+    background-image: url(./images/banners/banner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center right;
+    padding: 68px;
+    border-radius: 10px;
 }
 
-.header-box {
-    height: 100%;
+.banner-item-title {
+    font-size: 39px;
+    font-weight: 700;
+    color: #302C34;
+    max-width: 50%;
+    margin-top: 0;
+    margin-bottom: 15px;
+}
+
+.banner-item-subtitle {
+    font-size: 24px;
+    font-weight: 400;
+    color: #302C34;
+    max-width: 50%;
+    margin: 0;
+}
+
+.products {}
+
+.products-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.header-controls {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
+.products-header-title {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 42.19px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+
 }
 
+.products-header-search {
+    background: #FFF;
+    min-width: 306px;
+    height: 34px;
+    flex-shrink: 0;
+    border-radius: 2px;
+    border: 1px solid #D9D9D9;
+    padding: 5px 12px;
+}
+
+.products-header-search:focus {
+    outline: none;
+    border: none;
+}
+
+.products-header-search::placeholder {
+    color: #BFBFBF;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+}
 
 .footer {
-    height: 156px;
+    min-height: 156px;
+    display: flex;
+    align-items: center;
+    padding: 60px 0;
 }
 
 .footer-box {
     height: 100%;
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    gap: 36px;
 }
 
-.container {
-    height: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
+.footer-nav {
+    flex-grow: 1;
+}
+
+.footer-nav ul {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    list-style: none;
+    gap: 15px;
+    padding: 0;
+    margin: 0;
+}
+
+.footer-nav ul a {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 21.09px;
+    text-align: left;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: #595959;
+    text-decoration: none;
+}
+
+.footer-social {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    justify-content: flex-end;
+}
+
+@media (max-width: 991px) {
+    .banner-item-title {
+        max-width: 100%;
+    }
+
+    .banner-item-subtitle {
+        max-width: 100%;
+    }
 }
