--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body {
     gap: 4px;
     outline: none;
     height: 40px;
+    cursor: pointer;
 }
 
 
@@ -409,17 +410,69 @@ body {
 
 .cart-modal__body {}
 
-.cart-modal__footer {
+.cart-item {
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 15px;
+    margin-bottom: 15px;
+}
+
+.cart-item__title {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 32px;
+    margin: 0;
+}
+
+.cart-item__controls {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 15px;
+}
+
+.cart-item__controls button {
+    color: rgba(64, 169, 255, 1);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    border: 1px solid rgba(64, 169, 255, 1);
+    width: Hug (36px)px;
+    height: Hug (32px)px;
+    padding: 5px 16px 5px 16px;
+    gap: 4px;
+    border-radius: 2px;
+}
+
+.cart-item__controls--price {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 32px;
+    color: rgba(0, 0, 0, 1);
+    margin-right: 47px;
+}
+
+.cart-item__controls--count {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    color: rgba(0, 0, 0, 1);
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+.cart-modal__footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 50px;
 }
 
 .cart-modal__footer--price {
-    /* width: 66px;
-    height: 23px; */
     background: rgba(38, 38, 38, 1);
     border-radius: 5px;
     font-size: 20px;
