--- a/style.css
+++ b/style.css
@@ -118,8 +118,6 @@ body {
     margin: 0;
 }
 
-.products {}
-
 .products-header {
     display: flex;
     align-items: center;
@@ -176,7 +174,6 @@ body {
     overflow: hidden;
     background: #FFF;
     box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.05);
-
 }
 
 .products-card__image {
@@ -231,7 +228,6 @@ body {
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
     color: rgba(140, 140, 140, 1);
-
 }
 
 .products-card__description-controls {
@@ -251,7 +247,6 @@ body {
     text-align: left;
     text-underline-position: from-font;
     text-decoration-skip-ink: none;
-
 }
 
 .products-card__description-badge {
@@ -385,30 +380,19 @@ body {
     align-items: center;
     justify-content: space-between;
     gap: 15px;
-    margin-bottom: 48px;
+    margin-bottom: 30px;
 }
 
 .cart-modal__header--title {
     width: 143px;
     height: 42px;
-    top: 405px;
-    left: 373.84px;
-    gap: 0px;
-    opacity: 0px;
-    font-family: Roboto;
     font-size: 36px;
     font-weight: 700;
-    line-height: 42.19px;
-    text-align: left;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
 }
 
 .cart-modal__header--close {
     cursor: pointer;
 }
-
-.cart-modal__body {}
 
 .cart-item {
     display: flex;
@@ -416,7 +400,12 @@ body {
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 15px;
-    margin-bottom: 15px;
+}
+
+.cart-item:not(:last-child) {
+    padding-bottom: 8px;
+    margin-bottom: 17px;
+    border-bottom: 1px solid #D9D9D9;
 }
 
 .cart-item__title {
